--- a/src/SlowSlothBudget.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/src/SlowSlothBudget.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -22,3 +22,16 @@
         </tr>
     </tbody>
 </table>
+
+<table class='table' *ngIf="values">
+    <thead>
+        <tr>
+            <th>Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let value of values">
+            <td>{{ value }}</td>
+        </tr>
+    </tbody>
+</table>
